--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
-<!doctype html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="./favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css">
-    <title>Phaser - Template</title>
+    <title>Phaser3 + Parceljs Template</title>
+
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+    </style>
 </head>
 
 <body>
-    <div id="app">
-        <div id="game-container"></div>
-    </div>
-    <!-- <script type="module" src="src/main.js"></script> -->
+    <script src="src/main.ts"></script>
 </body>
+
 </html>
